Cleaned up box-shadow mixin; moved CSS rules from App.scss -> index.scss; fixed body being too large

--- a/frontend/src/components/Button/Button.scss
+++ b/frontend/src/components/Button/Button.scss
@@ -5,11 +5,7 @@ button {
   margin: 0;
   background-color: var(--background-color);
   color: var(--color);
-  @include box-shadow;
-
-  &:hover {
-    @include box-shadow(true);
-  }
+  @include box-shadow(true);
 
   &.primary {
     background-color: var(--primary-color);
